err/python-ilorest-library.err
Listing '.'...
Listing './bin'...
Compiling './bin/jsonpath.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/jsonpatch-1.21.dist-info'...
Listing './lib/python3.5/site-packages/jsonpath_rw'...
Listing './lib/python3.5/site-packages/jsonpath_rw/bin'...
Listing './lib/python3.5/site-packages/jsonpath_rw-1.4.0.egg-info'...
Listing './lib/python3.5/site-packages/jsonpointer-1.14.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/python_ilorest_library-2.1.0.egg-info'...
Listing './lib/python3.5/site-packages/recordtype-1.1.egg-info'...
Compiling './lib/python3.5/site-packages/recordtype.py'...
***   File "./lib/python3.5/site-packages/recordtype.py", line 250
    exec template in namespace
                ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/redfish'...
Listing './lib/python3.5/site-packages/redfish/hpilo'...
Listing './lib/python3.5/site-packages/redfish/rest'...
Listing './lib/python3.5/site-packages/redfish/ris'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urlparse2'...
Compiling './lib/python3.5/site-packages/urlparse2/urlparse1.py'...
***   File "./lib/python3.5/site-packages/urlparse2/urlparse1.py", line 386
    raise ValueError, "bad query field: %r" % (name_value,)
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/urlparse2-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/validictory'...
Listing './lib/python3.5/site-packages/validictory/tests'...
Listing './lib/python3.5/site-packages/validictory-1.1.2.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
